--- a/homepage/vendorsignup.html
+++ b/homepage/vendorsignup.html
@@ -1,33 +1,82 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Vendor Sign up sheet</title>
-</head>
 
-<body>
-<p>Please input the  following information:</p>
-<form action="" id="type of food">
-  <p>Business name:<br>
-    <input type="text" name="business name" value="">
-    <br>
-    Location:<br>
-    <input type="text" name="location" value="">
-    <br>
-    Type of Food<br>
-    <input name="type of food" type="text" id="type of food">
-    <br>
-    Quantity<br>
-    <input type="text" name = "quanity"> <br>
-    Expiration date<br>
-    <input type="text" name = "expiration date"><br>
-    Other notes <br>
-    <input type="text" name="other notes" size="45">
-    <br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
+    <title>Simple Bootstrap Registration Form - Bootsnipp.com</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="customer.css">
     
-  </p>
-    <input type="submit" value="Submit">
-  </p>
-</form> 
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="container">
+    <h1 class="well">Registration Form</h1>
+	<div class="col-lg-12 well">
+	<div class="row">
+				<form>
+					<div class="col-sm-12">
+						<div class="row">
+							<div class="col-sm-6 form-group">
+								<label>First Name</label>
+								<input type="text" placeholder="Enter First Name Here.." class="form-control">
+							</div>
+							<div class="col-sm-6 form-group">
+								<label>Last Name</label>
+								<input type="text" placeholder="Enter Last Name Here.." class="form-control">
+							</div>
+						</div>					
+						<div class="form-group">
+							<label>Address</label>
+							<textarea placeholder="Enter Address Here.." rows="3" class="form-control"></textarea>
+						</div>	
+						<div class="row">
+							<div class="col-sm-4 form-group">
+								<label>City</label>
+								<input type="text" placeholder="Enter City Name Here.." class="form-control">
+							</div>	
+							<div class="col-sm-4 form-group">
+								<label>State</label>
+								<input type="text" placeholder="Enter State Name Here.." class="form-control">
+							</div>	
+							<div class="col-sm-4 form-group">
+								<label>Zip</label>
+								<input type="text" placeholder="Enter Zip Code Here.." class="form-control">
+							</div>		
+						</div>
+						<div class="row">
+							<div class="col-sm-6 form-group">
+								<label>Title</label>
+								<input type="text" placeholder="Enter Designation Here.." class="form-control">
+							</div>		
+							<div class="col-sm-6 form-group">
+								<label>Company</label>
+								<input type="text" placeholder="Enter Company Name Here.." class="form-control">
+							</div>	
+						</div>						
+					<div class="form-group">
+						<label>Phone Number</label>
+						<input type="text" placeholder="Enter Phone Number Here.." class="form-control">
+					</div>		
+					<div class="form-group">
+						<label>Email Address</label>
+						<input type="text" placeholder="Enter Email Address Here.." class="form-control">
+					</div>	
+					<div class="form-group">
+						<label>Additional comments</label>
+						<textarea placeholder="If there are any thing else we need to know..." rows="3" class="form-control"></textarea>
+					</div>
+					<button type="button" class="btn btn-lg btn-info">Submit</button>					
+					</div>
+				</form> 
+				</div>
+	</div>
+	</div>
+<script type="text/javascript">
+
+</script>
 </body>
 </html>
