--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -25,45 +25,17 @@
     <h1>Welcome to The Online Grocery Database </h1>
     <p class="lead">Every year united states throws away one-thirds of the food it produces causing billion dollar wastage. Infact some of major retailers dispose the food 3 days before the sell by date as customers no longer choose them. The major cause of this wastage is due to the lack of awareness among the customer regarding the whereabouts of the products,sell-by-dates and the discounted prices at which they are available.
 	We propose a solution to this by creating a common platform for the sellers of retail outlets to post about these items with specific details about product</p>
-     <p><a class="btn btn-lg btn-success" href="vendorsignup.html" role="button">Vendor Sign Up Here</a></p>
-      <p><a class="btn btn-lg btn-success" href="customerregister.html" role="button">Customer Sign Up Here</a></p>
-     </div>
-   
-<?php
-$servername = "localhost";
-$username = "root";
-$password = "killing";
-$dbname = "test";
+    </div>
 
-// Create connection
-$conn = new mysqli($servername, $username, $password, $dbname);
-// Check connection
-if ($conn->connect_error) {
-    die("Connection failed: " . $conn->connect_error);
-} 
-
-// sql to create table
-$sql = "CREATE TABLE MyGuests (
-id INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY, 
-firstname VARCHAR(30) NOT NULL,
-lastname VARCHAR(30) NOT NULL,
-email VARCHAR(50),
-reg_date TIMESTAMP
-)";
-
-if ($conn->query($sql) === TRUE) {
-    echo "Table MyGuests created successfully";
-} else {
-    echo "Error creating table: " . $conn->error;
-}
-
-$conn->close();
-?>    
-
-    <div class="container">
+    <div class="row">
+  <div class="col-xs-5 col-md-4"><p align="center"><a class="btn btn-lg btn-success" href="vendorsignup.html" role="button">Vendor Sign Up Here</a></div>
+  <div class="col-xs-5 col-md-4"> <p align="center"><a class="btn btn-lg btn-primary" href="customerregister.html" role="button">Customer Sign Up Here</a></div>
+  <div class="col-xs-5 col-md-4"> <p align="center"><a class="btn btn-lg btn-info" href="images.html" role="button">Products Gallery</a></div>
+   </div>
+  <div class="container">
 
       <form class="form-signin">
-        <h2 class="form-signin-heading">Customer Sign In</h2>
+		  <h4 class="form-signin-heading">Customer or Vendor Sign In</h4>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
@@ -73,7 +45,7 @@ $conn->close();
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg" type="submit">Sign in</button>
       </form>
 
     </div> 
