--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -28,9 +28,9 @@
     </div>
 
     <div class="row">
-  <div class="col-xs-5 col-md-4"><p align="center"><a class="btn btn-lg btn-success" href="vendorsignup.html" role="button">Vendor Sign Up Here</a></div>
-  <div class="col-xs-5 col-md-4"> <p align="center"><a class="btn btn-lg btn-primary" href="customerregister.html" role="button">Customer Sign Up Here</a></div>
-  <div class="col-xs-5 col-md-4"> <p align="center"><a class="btn btn-lg btn-info" href="images.html" role="button">Products Gallery</a></div>
+  <div class="col-xs-5 col-md-4"><p align="center"><a class="btn btn-lg btn-success" href="vendorsignup.html" role="button">Vendor Sign Up Here</a></p></div>
+  <div class="col-xs-5 col-md-4"> <p align="center"><a class="btn btn-lg btn-primary" href="customerregister.html" role="button">Customer Sign Up Here</a></p></div>
+  <div class="col-xs-5 col-md-4"> <p align="center"><a class="btn btn-lg btn-info" href="images.html" role="button">Products Gallery</a></p></div>
    </div>
   <div class="container">
 
