--- a/project/vendorinventory.html
+++ b/project/vendorinventory.html
@@ -10,13 +10,15 @@
 </head>
 <body>
 
+
+
 <div class="container">
   <h2>Vendory Inventory</h2>
   <p>Please click on each of the product below and tell us the inventory you have</p>
   <div class="row">
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="../images/asianperl.jpg" target="_blank>
+        <a href="../images/asianperl.jpg" target="_blank">
           <img src="../images/asianperl.jpg" alt="Lights" style="width:100%">
           <div class="caption">
             <p align="center">Asian Pearl</p>
@@ -24,16 +26,25 @@
         </a>
       </div>
     </div>
-          <div class="col-md-4">
+  <div class="col-md-4">
       <div class="thumbnail">
-        <a href="../images/blackberries.jpg" target="_blank">
+        <a href="inventory.html" data-target="#theModal" data-toggle="modal">
           <img src="../images/blackberries.jpg" alt="Fjords" style="width:100%">
           <div class="caption">
             <p align="center">Black Berries</p>
           </div>
         </a>
+
+  <div id="theModal" class="modal fade">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
       </div>
     </div>
+  </div>
+      </div>
+
+  </div>
+  
     <div class="col-md-4">
       <div class="thumbnail">
         <a href="../images/cantaloupe.jpg" target="_blank">
