--- a/project/vendorinventory.html
+++ b/project/vendorinventory.html
@@ -4,18 +4,19 @@
   <title>Vendor Inventory</title>
   <meta charset="utf-8">
   <meta name="keywords" content="vendor details of inventory" />
-  <!-- //for-mobile-apps -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-  <!-- font-awesome icons -->
+    
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
-  <!-- //font-awesome icons -->
-  <!-- js -->
+	
   <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-  <!-- //js -->
+
   <link href='//fonts.googleapis.com/css?family=Ubuntu:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
-
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- start-smoth-scrolling -->
 </head>
 <body>
   <?php
@@ -37,7 +38,7 @@
     </div>
   <div class="col-md-4">
       <div class="thumbnail">
-        <a href="inventory.html" data-target="#theModal" data-toggle="modal">
+        <a href="inventorytest.html" data-target="#theModal" data-toggle="modal">
           <img src="../images/blackberries.jpg" alt="Fjords" style="width:100%">
           <div class="caption">
             <p align="center">Black Berries</p>
