fruits, veggies, snacks

--- a/project/inventory.html
+++ b/project/inventory.html
@@ -22,6 +22,7 @@
 <div class="modal-body">
 <div class="panel panel-default">
 	<span>
+
 <form class="form-horizontal">
 <fieldset>
 
@@ -35,7 +36,7 @@
   <label class="col-md-4 control-label">Quanity</label>  
   <div class="col-md-5">
      <div class="form-inline">
-   <input id="quantity" name="quality" type="text" class="form-control" placeholder="enter your quantiy here...">
+   <input id="quantity" name="quantity" type="text" class="form-control" placeholder="enter your quantiy here...">
     <select id="unit" name="unit" class="form-control">
       <option value="1">lbs</option>
       <option value="2">kg</option>
