--- a/project/vendorinventory.html
+++ b/project/vendorinventory.html
@@ -16,177 +16,25 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <!-- start-smoth-scrolling -->
 </head>
 <body>
-  <?php
+<!--  <?php
   	include_once("vendorheader.php");
-  ?>
-<div class="container">
-  <h2>Vendory Inventory</h2>
-  <p>Please click on each of the product below and tell us the inventory you have</p>
-  <div class="row">
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/asianperl.jpg" target="_blank">
-          <img src="../images/asianperl.jpg" alt="Lights" style="width:100%">
-          <div class="caption">
-            <p align="center">Asian Pearl</p>
-          </div>
-        </a>
-      </div>
-    </div>
-  <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="inventorytest.html" data-target="#theModal" data-toggle="modal">
-          <img src="../images/blackberries.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Black Berries</p>
-          </div>
-        </a>
-
-  <div id="theModal" class="modal fade">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-      </div>
-    </div>
+  ?> -->
+<div position="relative">
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Fruits</a></li>
+    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Vegetables</a></li>
+    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Snack</a></li>
+  </ul>
+	</div>
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="home"><iframe src="fruits.html" height="1080" width="1920"></iframe></div>
+    <div role="tabpanel" class="tab-pane" id="profile">...</div>
+    <div role="tabpanel" class="tab-pane" id="messages">...</div>
+    <div role="tabpanel" class="tab-pane" id="settings">...</div>
   </div>
-      </div>
 
-  </div>
-  
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/cantaloupe.jpg" target="_blank">
-          <img src="../images/cantaloupe.jpg" alt="Nature" style="width:100%">
-          <div class="caption">
-            <p align="center">Cantaloupe</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/coconut.jpg" target="_blank">
-          <img src="../images/coconut.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Coconut</p>
-          </div>
-        </a>
-      </div>
-    </div>
-        <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/grapefruit.jpg" target="_blank">
-          <img src="../images/grapefruit.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Grapefruit</p>
-          </div>
-        </a>
-      </div>
-    </div>
-        <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/greenapple.jpg" target="_blank">
-          <img src="../images/greenapple.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Greenapple</p>
-          </div>
-        </a>
-      </div>
-    </div>
-        <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/honeydew.jpg" target="_blank">
-          <img src="../images/honeydew.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Honeydew</p>
-          </div>
-        </a>
-      </div>
-    </div>
-        <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/kiwi.jpg" target="_blank">
-          <img src="../images/kiwi.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Kiwi</p>
-          </div>
-        </a>
-      </div>
-    </div>
-        <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/opalapple.jpg" target="_blank">
-          <img src="../images/opalapple.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Opal Apple</p>
-          </div>
-        </a>
-      </div>
-    </div>
-        <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/oranges.jpg" target="_blank">
-          <img src="../images/oranges.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Oranges</p>
-          </div>
-        </a>
-      </div>
-    </div>
-        <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/pearl.jpg" target="_blank">
-          <img src="../images/pearl.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Pearl</p>
-          </div>
-        </a>
-      </div>
-    </div>
-      <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/rasberries.jpg" target="_blank">
-          <img src="../images/rasberries.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Rasberries</p>
-          </div>
-        </a>
-      </div>
-    </div>
-        <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/redapple.jpg" target="_blank">
-          <img src="../images/redapple.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Red Apple</p>
-          </div>
-        </a>
-      </div>
-    </div>
-            <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/snowmelon.jpg" target="_blank">
-          <img src="../images/snowmelon.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Snow Melon</p>
-          </div>
-        </a>
-      </div>
-    </div>
-            <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="../images/strawberries.jpg" target="_blank">
-          <img src="../images/strawberries.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p align="center">Strawberries</p>
-          </div>
-        </a>
-      </div>
-    </div>
-
-  </div>
 </div>
 <script>
 $(document).ready(function(){
