--- a/project/inventory.html
+++ b/project/inventory.html
@@ -23,15 +23,12 @@
 <div class="panel panel-default">
 	<span>
 
-<form class="form-horizontal">
+<form class="form-horizontal" action="inventorysubmit.php" method = "POST">
 <fieldset>
 
 <!-- Form Name -->
 <legend></legend>
 
-<!-- Select Basic -->
-
-<!-- Text input-->
 <div class="form-group">
   <label class="col-md-4 control-label">Quanity</label>  
   <div class="col-md-5">
@@ -71,7 +68,15 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-sm-10">
+    <div class="text-center">
+      <button type="submit" class="btn btn-info" id="singlebutton">Submit</button>
+    </div>
+  </div>
+</div>
 </fieldset>
+
 </form>
 </span>
 </div>
