--- a/project/inventory.html
+++ b/project/inventory.html
@@ -68,6 +68,28 @@
   </div>
 </div>
 
+<div class="form-group">
+  <label class="col-md-4 control-label">Discount Percentage</label>  
+  <div class="col-md-5">
+     <div class="form-inline">
+   <input id="discountpercentage" name="discountpercentage" type="text" class="form-control" placeholder="enter your discount %">
+  </div>  
+  </div>
+</div>
+
+<div class="form-group">
+  <label class="col-md-4 control-label">Dynamic Pricing</label>  
+  <div class="col-md-5">
+     <div class="form-inline">
+    <select id="price" name="price" class="form-control">
+      <option value="Y">Yes</option>
+      <option value="N">No</option>
+    </select>
+  </div>  
+  </div>
+</div>
+
+
 <div class="row">
   <div class="col-sm-10">
     <div class="text-center">
