--- a/project/inventorytest.html
+++ b/project/inventorytest.html
@@ -12,6 +12,7 @@
 
 <!-- Text input-->
 <div class="form-group">
+	<input type="hidden"/>
   <label class="col-md-4 control-label">Quanity</label>  
   <div class="col-md-5">
      <div class="form-inline">
